import lucos_arachne API key into example's HTML for testing with

--- a/example/index.html
+++ b/example/index.html
@@ -4,6 +4,6 @@
 		<script src="./built.js"></script>
 	</head>
 	<body>
-		<lucos-search></lucos-search>
+		<lucos-search api-key="${KEY_LUCOS_ARACHNE}"></lucos-search>
 	</body>
 </html>
