use customized built-in element instead of autonomous custom element

--- a/example/index.html
+++ b/example/index.html
@@ -3,7 +3,7 @@
 		<title>Hello World Search Component</title>
 	</head>
 	<body>
-		<lucos-search api-key="${KEY_LUCOS_ARACHNE}"></lucos-search>
+		<label for="search-field">Search For:</label><select is="lucos-search" api-key="${KEY_LUCOS_ARACHNE}" id="search-field"></select>
 		<script src="./built.js"></script>
 	</body>
 </html>
