move lucos-search into web-components directory

--- a/example/index.html
+++ b/example/index.html
@@ -3,6 +3,7 @@
 		<title>Hello World Search Component</title>
 	</head>
 	<body>
+		<h1>lucos-search</h1>
 		<label for="search1">Everything:</label><span is="lucos-search" data-api-key="${KEY_LUCOS_ARACHNE}"><select id="search1"></select></span>
 		<label for="search2">No Tracks:</label><span is="lucos-search" data-api-key="${KEY_LUCOS_ARACHNE}" data-exclude_types="Track"><select id="search2"></select></span>
 		<label for="search3">Only Cites and Rivers:</label><span is="lucos-search" data-api-key="${KEY_LUCOS_ARACHNE}" data-types="City,River"><select id="search3"></select></span>
