add basic language element

--- a/example/index.html
+++ b/example/index.html
@@ -28,6 +28,13 @@
 			<option value="https://eolas.l42.eu/metadata/place/316/" selected>https://eolas.l42.eu/metadata/place/316/</option>
 			<option value="https://eolas.l42.eu/metadata/place/317/" selected>https://eolas.l42.eu/metadata/place/317/</option>
 		</select></span>
+		<h1>lucos-lang</h1>
+		<label for="lang1">Blank:</label><span is="lucos-lang" data-api-key="${KEY_LUCOS_ARACHNE}"><select id="lang1"></select></span>
+		<label for="lang2">Load with existing:</label><span is="lucos-lang" data-api-key="${KEY_LUCOS_ARACHNE}"><select id="lang2" multiple>
+			<option id="ga" selected>ga</option>
+			<option id="emen" selected>emen</option>
+			<option id="art-x-simlish" selected>art-x-simlish</option>
+		</select></span>
 		<script src="./built.js"></script>
 	</body>
 </html>
