add attribute for common languages

--- a/example/index.html
+++ b/example/index.html
@@ -35,6 +35,12 @@
 			<option id="emen" selected>emen</option>
 			<option id="art-x-simlish" selected>art-x-simlish</option>
 		</select></span>
+		<label for="lang3">No lang option</label><span is="lucos-lang" data-api-key="${KEY_LUCOS_ARACHNE}" data-no-lang="No Language">
+			<select id="lang3" multiple><option id="zxx" selected>zxx</option></select>
+		</span>
+		<label for="lang3">Common languages option</label><span is="lucos-lang" data-api-key="${KEY_LUCOS_ARACHNE}" data-no-lang="No Language" data-common="en,ga,zxx">
+			<select id="lang3"></select>
+		</span>
 		<script src="./built.js"></script>
 	</body>
 </html>
