document components and their attributes

--- a/example/index.html
+++ b/example/index.html
@@ -8,35 +8,35 @@
 		<label for="search2">No Tracks:</label><span is="lucos-search" data-api-key="${KEY_LUCOS_ARACHNE}" data-exclude_types="Track"><select id="search2"></select></span>
 		<label for="search3">Only Cites and Rivers:</label><span is="lucos-search" data-api-key="${KEY_LUCOS_ARACHNE}" data-types="City,River"><select id="search3"></select></span>
 		<label for="search4">Load with existing items:</label><span is="lucos-search" data-api-key="${KEY_LUCOS_ARACHNE}"><select id="search4" multiple>
-			<option id="https://contacts.l42.eu/people/2" selected>https://contacts.l42.eu/people/2</option>
-			<option id="https://eolas.l42.eu/metadata/place/2/" selected>https://eolas.l42.eu/metadata/place/2/</option>
-			<option id="https://media-metadata.l42.eu/tracks/13713" selected>https://media-metadata.l42.eu/tracks/13713</option>
+			<option selected>https://contacts.l42.eu/people/2</option>
+			<option selected>https://eolas.l42.eu/metadata/place/2/</option>
+			<option selected>https://media-metadata.l42.eu/tracks/13713</option>
 		</select></span>
 		<label for="search5">More than 10:</label>
 		<span is="lucos-search" data-api-key="${KEY_LUCOS_ARACHNE}" data-exclude_types="Track"><select id="search5" multiple>
-			<option value="https://eolas.l42.eu/metadata/place/125/" selected>https://eolas.l42.eu/metadata/place/125/</option>
-			<option value="https://eolas.l42.eu/metadata/place/126/" selected>https://eolas.l42.eu/metadata/place/126/</option>
-			<option value="https://eolas.l42.eu/metadata/place/28/" selected>https://eolas.l42.eu/metadata/place/28/</option>
-			<option value="https://eolas.l42.eu/metadata/place/307/" selected>https://eolas.l42.eu/metadata/place/307/</option>
-			<option value="https://eolas.l42.eu/metadata/place/308/" selected>https://eolas.l42.eu/metadata/place/308/</option>
-			<option value="https://eolas.l42.eu/metadata/place/310/" selected>https://eolas.l42.eu/metadata/place/310/</option>
-			<option value="https://eolas.l42.eu/metadata/place/311/" selected>https://eolas.l42.eu/metadata/place/311/</option>
-			<option value="https://eolas.l42.eu/metadata/place/312/" selected>https://eolas.l42.eu/metadata/place/312/</option>
-			<option value="https://eolas.l42.eu/metadata/place/313/" selected>https://eolas.l42.eu/metadata/place/313/</option>
-			<option value="https://eolas.l42.eu/metadata/place/314/" selected>https://eolas.l42.eu/metadata/place/314/</option>
-			<option value="https://eolas.l42.eu/metadata/place/315/" selected>https://eolas.l42.eu/metadata/place/315/</option>
-			<option value="https://eolas.l42.eu/metadata/place/316/" selected>https://eolas.l42.eu/metadata/place/316/</option>
-			<option value="https://eolas.l42.eu/metadata/place/317/" selected>https://eolas.l42.eu/metadata/place/317/</option>
+			<option selected>https://eolas.l42.eu/metadata/place/125/</option>
+			<option selected>https://eolas.l42.eu/metadata/place/126/</option>
+			<option selected>https://eolas.l42.eu/metadata/place/28/</option>
+			<option selected>https://eolas.l42.eu/metadata/place/307/</option>
+			<option selected>https://eolas.l42.eu/metadata/place/308/</option>
+			<option selected>https://eolas.l42.eu/metadata/place/310/</option>
+			<option selected>https://eolas.l42.eu/metadata/place/311/</option>
+			<option selected>https://eolas.l42.eu/metadata/place/312/</option>
+			<option selected>https://eolas.l42.eu/metadata/place/313/</option>
+			<option selected>https://eolas.l42.eu/metadata/place/314/</option>
+			<option selected>https://eolas.l42.eu/metadata/place/315/</option>
+			<option selected>https://eolas.l42.eu/metadata/place/316/</option>
+			<option selected>https://eolas.l42.eu/metadata/place/317/</option>
 		</select></span>
 		<h1>lucos-lang</h1>
 		<label for="lang1">Blank:</label><span is="lucos-lang" data-api-key="${KEY_LUCOS_ARACHNE}"><select id="lang1"></select></span>
 		<label for="lang2">Load with existing:</label><span is="lucos-lang" data-api-key="${KEY_LUCOS_ARACHNE}"><select id="lang2" multiple>
-			<option id="ga" selected>ga</option>
-			<option id="emen" selected>emen</option>
-			<option id="art-x-simlish" selected>art-x-simlish</option>
+			<option selected>ga</option>
+			<option selected>emen</option>
+			<option selected>art-x-simlish</option>
 		</select></span>
 		<label for="lang3">No lang option</label><span is="lucos-lang" data-api-key="${KEY_LUCOS_ARACHNE}" data-no-lang="No Language">
-			<select id="lang3" multiple><option id="zxx" selected>zxx</option></select>
+			<select id="lang3" multiple><option selected>zxx</option></select>
 		</span>
 		<label for="lang3">Common languages option</label><span is="lucos-lang" data-api-key="${KEY_LUCOS_ARACHNE}" data-no-lang="No Language" data-common="en,ga,zxx">
 			<select id="lang3"></select>
