update anthropological colours to be consistent with what's used in lucos-lang

--- a/example/index.html
+++ b/example/index.html
@@ -11,6 +11,7 @@
 			<option selected>https://contacts.l42.eu/people/2</option>
 			<option selected>https://eolas.l42.eu/metadata/place/2/</option>
 			<option selected>https://media-metadata.l42.eu/tracks/13713</option>
+			<option selected>https://eolas.l42.eu/metadata/language/ain/</option>
 		</select></span>
 		<label for="search5">More than 10:</label>
 		<span is="lucos-search" data-api-key="${KEY_LUCOS_ARACHNE}" data-exclude_types="Track"><select id="search5" multiple>
